Add Master Path, Batch File CRUD

--- a/FTPMonitoring/Views/FTPMonitor/History_Modal.cshtml
+++ b/FTPMonitoring/Views/FTPMonitor/History_Modal.cshtml
@@ -14,8 +14,8 @@
                         <th>File Template Name</th>
                         <th>File Name</th>
                         <th>File Modified Datetime</th>
-                        <th>Status</th>
-                        <th>ETL Run Datetime</th>
+                        <th>Last Status</th>
+                        <th>Last ETL Run Datetime</th>
                     </tr>
                     </thead>
                 </table>
