--- a/FTPMonitoring/Views/FTPMonitor/Index.cshtml
+++ b/FTPMonitoring/Views/FTPMonitor/Index.cshtml
@@ -37,16 +37,16 @@
         }
 
         .col-centered {
-            display:inline-block;
-            float:none;
-            /* reset the text-align */
-            text-align:left;
-            /* inline-block space fix */
-            margin-right:-4px;
+            float: none;
+            margin: 0 auto;
         }
 
         .pt-5 {
             padding-top: 5px;
+        }
+
+        th.dt-center, td.dt-center {
+            text-align: center;
         }
     </style>
 }
