--- a/FTPMonitoring/Views/MasterBatchFile/Index.cshtml
+++ b/FTPMonitoring/Views/MasterBatchFile/Index.cshtml
@@ -61,7 +61,7 @@
                             <thead>
                                 <tr>
                                     <th>ID BatchFile</th>
-                                    <th>Nama BatchFile</th>
+                                    <th>Path Dari BatchFile</th>
                                     <th>Aksi</th>
                                 </tr>
                             </thead>
@@ -79,5 +79,5 @@
 
 @section Script
 {
-    <script type="text/javascript" src="~/Scripts/master-batch.js"></script>
+    <script type="text/javascript" src="~/Scripts/master-batch-file.js"></script>
 }
