--- a/FTPMonitoring/Views/MasterBatchFile/UtilitiesModal.cshtml
+++ b/FTPMonitoring/Views/MasterBatchFile/UtilitiesModal.cshtml
@@ -15,8 +15,8 @@
                         <input type="text" class="form-control" id="id" placeholder="ID BatchFile" disabled="disabled" />
                     </div>
                     <div class="form-group">
-                        <label for="name">Nama BatchFile</label>
-                        <input type="text" class="form-control" id="name" placeholder="Nama BatchFile" />
+                        <label for="name">Path Dari BatchFile</label>
+                        <input type="text" class="form-control" id="name" placeholder="Path BatchFile" />
                     </div>
                 </form>
             </div>
