--- a/FTPMonitoring/Views/Shared/_layout.cshtml
+++ b/FTPMonitoring/Views/Shared/_layout.cshtml
@@ -75,6 +75,8 @@ desired effect
     <script src="~/admin-lte/js/adminlte.min.js"></script>
     <!-- Toastr -->
     <script src="~/Scripts/toastr.min.js"></script>
+    <!-- Toastr -->
+    <script src="~/Scripts/moment.min.js"></script>
     @RenderSection("Script", required:false)
 
 <!-- Optionally, you can add Slimscroll and FastClick plugins.
