Tambahan Fitur CRUD Master Pattern Extension, Master Status, Konfigurasi Monitoring

--- a/FTPMonitoring/Views/FTPMonitor/Index.cshtml
+++ b/FTPMonitoring/Views/FTPMonitor/Index.cshtml
@@ -59,8 +59,7 @@
             Monitoring Perpindahan Data
         </h1>
         <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
-            <li class="active">Here</li>
+            <li class="active"><a href="/FTPMonitor/Index"><i class="fa fa-dashboard"></i> Dashboard</a></li>
         </ol>
     </section>
 
