--- a/FTPMonitoring/Views/MasterBatchFile/Index.cshtml
+++ b/FTPMonitoring/Views/MasterBatchFile/Index.cshtml
@@ -38,8 +38,8 @@
             Pengelolaan Data Master
         </h1>
         <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
-            <li class="active">Here</li>
+            <li><a href="/FTPMonitor/Index"><i class="fa fa-dashboard"></i> Dashboard</a></li>
+            <li class="active">Pengelolaan Data Master Batch File</li>
         </ol>
     </section>
 
@@ -50,18 +50,18 @@
                 <div class="box box-danger">
                     <div class="box-header">
                         <div class="row">
-                            <div class="col-xs-6"><h3 class="box-title">Pengelolaan Data Master BatchFile</h3></div>
+                            <div class="col-xs-6"><h3 class="box-title">Pengelolaan Data Master Batch File</h3></div>
                         </div>
                     </div>
                     <div class="box-body">
                         <button class="btn btn-primary" href="#" data-toggle="modal" data-target="#MasterBatchFileModal" onclick="clearTextBox();" style="margin-bottom: 15px;">
-                            <i class="fa fa-plus-square" style="margin-right: 5px;"></i> Tambah Data Master BatchFile
+                            <i class="fa fa-plus-square" style="margin-right: 5px;"></i> Tambah Data Master Batch File
                         </button>
                         <table id="MasterBatchFileDatatables" class="table table-bordered table-hover">
                             <thead>
                                 <tr>
-                                    <th>ID BatchFile</th>
-                                    <th>Path Dari BatchFile</th>
+                                    <th>ID Batch File</th>
+                                    <th>Path Dari Batch File</th>
                                     <th>Aksi</th>
                                 </tr>
                             </thead>
