--- a/FTPMonitoring/Views/MasterSRO/Index.cshtml
+++ b/FTPMonitoring/Views/MasterSRO/Index.cshtml
@@ -38,8 +38,8 @@
             Pengelolaan Data Master
         </h1>
         <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
-            <li class="active">Here</li>
+            <li><a href="/FTPMonitor/Index"><i class="fa fa-dashboard"></i> Dashboard</a></li>
+            <li class="active">Pengelolaan Data Master SRO</li>
         </ol>
     </section>
 
