--- a/FTPMonitoring/Views/MasterPatternExtension/Index.cshtml
+++ b/FTPMonitoring/Views/MasterPatternExtension/Index.cshtml
@@ -38,8 +38,8 @@
             Pengelolaan Data Master
         </h1>
         <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
-            <li class="active">Here</li>
+            <li><a href="/FTPMonitor/Index"><i class="fa fa-dashboard"></i> Dashboard</a></li>
+            <li class="active">Pengelolaan Data Master Pattern Extension</li>
         </ol>
     </section>
 
@@ -79,5 +79,5 @@
 
 @section Script
 {
-    <script type="text/javascript" src="~/Scripts/master-pattern.js"></script>
+    <script type="text/javascript" src="~/Scripts/master-pattern-extension.js"></script>
 }
