--- a/FTPMonitoring/Views/MasterStatus/UtilitiesModal.cshtml
+++ b/FTPMonitoring/Views/MasterStatus/UtilitiesModal.cshtml
@@ -18,6 +18,12 @@
                         <label for="name">Nama Status</label>
                         <input type="text" class="form-control" id="name" placeholder="Nama Status" />
                     </div>
+                    <div class="form-group">
+                        <label for="patternExtensionSelector">Pattern Extension Yang Dipakai</label>
+                        <select id="patternExtensionSelector" class="form-control">
+                            <option selected>Pilih Pattern Extension Yang Dipakai</option>
+                        </select>
+                    </div>
                 </form>
             </div>
             <div class="modal-footer">
