--- a/FTPMonitoring/Views/Shared/_header.cshtml
+++ b/FTPMonitoring/Views/Shared/_header.cshtml
@@ -11,7 +11,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/FTPMonitor/Index">Dashboard <span class="sr-only">(current)</span></a></li>
+                    <li><a href="/FTPMonitor/Index">Dashboard <span class="sr-only">(current)</span></a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pengelolaan Data Master <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
@@ -25,15 +25,9 @@
                             <li class="divider"></li>
                             <li><a href="/MasterSRO/Index">Pengelolaan Data Master SRO</a></li>
                             <li class="divider"></li>
-                            <li><a href="/MasterState/Index">Pengelolaan Data Master State</a></li>
-                            <li class="divider"></li>
                             <li><a href="/MasterStatus/Index">Pengelolaan Data Master Status</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pengelolaan Log Monitoring <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="/MonitoringConfiguration/Index">Monitoring Configuration</a></li>
+                            <li class="divider"></li>
+                            <li><a href="/MonitoringConfiguration/Index">Pengelolaan Data Konfigurasi Monitoring</a></li>
                         </ul>
                     </li>
                 </ul>
