Tambahan Timeline Untuk Detail History Monitoring

--- a/FTPMonitoring/Views/FTPMonitor/History_Modal.cshtml
+++ b/FTPMonitoring/Views/FTPMonitor/History_Modal.cshtml
@@ -16,6 +16,7 @@
                         <th>File Modified Datetime</th>
                         <th>Last Status</th>
                         <th>Last ETL Run Datetime</th>
+                        <th>Aksi</th>
                     </tr>
                     </thead>
                 </table>
