--- a/FTPMonitoring/Views/FTPMonitor/Index.cshtml
+++ b/FTPMonitoring/Views/FTPMonitor/Index.cshtml
@@ -78,6 +78,7 @@
 <!-- /.content-wrapper -->
 
 @RenderPage("History_Modal.cshtml")
+@RenderPage("History_Timeline_Modal.cshtml")
 
 @section Script
 {
